examples/test/testpolicy12944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12944
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key49: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value38
      podSelector:
        matchLabels:
          key29: value10
          key48: value32
          key23: value27
